<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ioutd.teslavalet.MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="0dp"
            android:layout_height="178dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rightSwitch" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="364dp"
            android:text="@string/preferences_header"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/trunkSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/trunk"
            app:layout_constraintEnd_toEndOf="@+id/frunkSwitch"
            app:layout_constraintTop_toBottomOf="@+id/frunkSwitch" />

        <Switch
            android:id="@+id/driverSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/driver"
            app:layout_constraintEnd_toEndOf="@+id/trunkSwitch"
            app:layout_constraintTop_toBottomOf="@+id/trunkSwitch" />

        <Switch
            android:id="@+id/passengerSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/passanger"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginLeft="50dp" />

        <Switch
            android:id="@+id/leftSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/back_left"
            app:layout_constraintEnd_toEndOf="@+id/passengerSwitch"
            app:layout_constraintTop_toBottomOf="@+id/passengerSwitch" />

        <Switch
            android:id="@+id/rightSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/back_right"
            app:layout_constraintEnd_toEndOf="@+id/leftSwitch"
            app:layout_constraintTop_toBottomOf="@+id/leftSwitch" />

        <Switch
            android:id="@+id/frunkSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="16dp"
            android:text="@string/frunk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginRight="60dp" />

        <ImageView
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="312dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/parent"
            app:srcCompat="@drawable/tesla" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
